--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
                         <span>Open Menu</span>
                     </button>
                     <h1 class="pkp_screen_reader">
-                    															Proceedings of the International Conference on Head-Driven Phrase Structure Grammar
+                    															Proceedings of the Pacific Asia Conference on Language, Information and Computation
                     													</h1>
                     <div class="pkp_site_name">
-                        <a href="						https://proceedings.hpsg.xyz/index
-                        					" class="is_text">Proceedings of the International Conference on Head-Driven Phrase Structure Grammar</a>
+                        <a href="						https://paclic-steering.github.io/index
+                        					" class="is_text">Pacific Asia Conference on Language, Information and Computation</a>
                     </div>
                 </div>
 
@@ -49,47 +49,47 @@
                         <div class="pkp_navigation_primary_wrapper">
                             <ul id="navigationPrimary" class="pkp_navigation_primary pkp_nav_list">
                                 <li class="">
-                                    <a href="https://proceedings.hpsg.xyz/issue/current">
+                                    <a href="https://paclic-steering.github.io/current">
                                     					Current
                                     				</a>
                                 </li>
                                 <li class="">
-                                    <a href="https://proceedings.hpsg.xyz/issue/archive">
+                                    <a href="https://paclic-steering.github.io/archive">
                                     					Archives
                                     				</a>
                                 </li>
                                 <li class="">
-                                    <a href="https://proceedings.hpsg.xyz/about">
+                                    <a href="https://paclic-steering.github.io/about">
                                     					About
                                     				</a>
                                     <ul>
                                         <li class="">
-                                            <a href="https://proceedings.hpsg.xyz/about">
+                                            <a href="https://paclic-steering.github.io/about">
                                             										About the journal
                                             									</a>
                                         </li>
                                         <li class="">
-                                            <a href="https://proceedings.hpsg.xyz/about/editorialTeam">
+                                            <a href="https://paclic-steering.github.io/editorialTeam">
                                             										Editorial team
                                             									</a>
                                         </li>
                                         <li class="">
-                                            <a href="https://proceedings.hpsg.xyz/StandingCommittee">
+                                            <a href="https://paclic-steering.github.io/SteeringCommittee">
                                             										Standing Committee
                                             									</a>
                                         </li>
                                         <li class="">
-                                            <a href="https://proceedings.hpsg.xyz/PaperSelectionProcess">
+                                            <a href="https://paclic-steering.github.io/process">
                                             										Paper selection process
                                             									</a>
                                         </li>
                                         <li class="">
-                                            <a href="https://proceedings.hpsg.xyz/ethics">
+                                            <a href="https://paclic-steering.github.io/ethics">
                                             										Policy on publication ethics
                                             									</a>
                                         </li>
                                         <li class="">
-                                            <a href="https://proceedings.hpsg.xyz/about/contact">
+                                            <a href="https://paclic-steering.github.io/about/contact">
                                             										Contact
                                             									</a>
                                         </li>
@@ -114,11 +114,6 @@
                                 					Register
                                 				</a>
                             </li>
-                            <li class="profile">
-                                <a href="https://proceedings.hpsg.xyz/login">
-                                					Login
-                                				</a>
-                            </li>
                         </ul>
 
                     </div>
@@ -140,7 +135,7 @@
                         				Current Issue
                         			</h2>
                         <div class="current_issue_title">
-                        				2023: Proceedings of the 30th International Conference on Head-Driven Phrase Structure Grammar
+                        				2024: Proceedings of the 38th Pacific Asia Conference on Language, Information and Computation
                         			</div>
                         <div class="obj_issue_toc">
 
@@ -150,9 +145,9 @@
                                     <p>
                                         University of Massachusetts Amherst
                                         <br>
-                                        July 7–9, 2023
+                                       December 7-9, 2024
                                     </p>
-                                    <p>Editors: Stefan  Müller, Elodie Winckel</p>
+                                    <p>Editors: Jong-Bok Kim, Okgi Kim, Seulkee Park</p>
                                 </div>
 
                                 <div class="published">
@@ -160,7 +155,7 @@
                                     					Published:
                                     				</span>
                                     <span class="value">
-                                    					2023-11-10
+                                    					2024-12-31
                                     				</span>
                                 </div>
                             </div>
@@ -172,7 +167,7 @@
                                 <ul class="galleys_links">
                                     <li>
 
-                                        <a class="obj_galley_link file" href="https://proceedings.hpsg.xyz/issue/view/47/65" aria-labelledby=issueTocGalleyLabel>
+                                        <a class="obj_galley_link file" href="https://paclic-steering.github.io/issue/view/38/1" aria-labelledby=issueTocGalleyLabel>
 
                                         		
                                         	BibTeX
@@ -181,7 +176,7 @@
                                     </li>
                                     <li>
 
-                                        <a class="obj_galley_link pdf" href="https://proceedings.hpsg.xyz/issue/view/47/67" aria-labelledby=issueTocGalleyLabel>
+                                        <a class="obj_galley_link pdf" href="https://paclic-steering.github.io/issue/view/38/2" aria-labelledby=issueTocGalleyLabel>
 
                                         		
                                         	PDF
